--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="nb" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>SISAKA-herre</title>
-  <link rel="stylesheet" href="../a INDEX/main.css">
+  <title>SISAKA</title>
+  <link rel="stylesheet" href="herre.css">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
 
 
     <section>
-      <a href="../a INDEX/index.html"><img src="../bilder/logo.psd" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="../bilder/logo.psd" alt="logo" class="logo"></a>
     </section>
 
 
@@ -61,23 +62,75 @@
       <a href="../header/ønskeliste.html">LISTE</a>
 
     </div>
+
   </header>
 
   <main>
 
     <nav class="navigation">
+
+
       <section class="klesvalg">
-        <a href="../Dame.html">Nyheter </a>
 
-        <a href="../herre.html">klær </a>
 
-        <a href="../Barn.html"> Sko </a>
 
-        <a href="../Dame.html"> sport </a>
 
-        <a href="../herre.html"> accesories </a>
+        <div class="dropned"><a href="../herre.html">klær </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
 
-        <a href="../Barn.html"> Salg </a>
+
+
+        <div class="dropned"><a href="../herre.html">Sko </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
+
+
+
+        <div class="dropned"><a href="../herre.html">sport </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
+
+
+
+        <div class="dropned"><a href="../herre.html">accesories </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
+
+
+        <div class="dropned"><a href="../herre.html">Salg </a>
+          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </div>
+        </div>
       </section>
 
       <section class="denusynlig">
@@ -90,6 +143,16 @@
 
     </nav>
 
+
+
+
+    <section class="valg">
+
+    </section>
+
+
+
+
     <section class="herre_hoved">
 
 
@@ -97,41 +160,183 @@
 
       </section>
 
-      <section class="grid_herre">
-        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
-        </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+
+
+        <section class="nyheter_index">
+          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+          <div class="Merke">Polo Ralph Lauren </div>
+          <div class="navn">BEAR - Strikkegenser
+          </div>
+          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+        </section>
+
+        <section class="nyheter_index">
+          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+          <div class="Merke">Polo Ralph Lauren </div>
+          <div class="navn">BEAR - Strikkegenser
+          </div>
+          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+        </section>
+
+        <section class="nyheter_index">
+          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+          <div class="Merke">Polo Ralph Lauren </div>
+          <div class="navn">BEAR - Strikkegenser
+          </div>
+          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+        </section>
+
+
       </section>
 
-
-      <section class="grid_herre">
-        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
-        </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-      </section>
+  </main>
 
 
-      <section class="grid_herre">
-        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-        <div class="Merke">Polo Ralph Lauren </div>
-        <div class="navn">BEAR - Strikkegenser
-        </div>
-        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-      </section>
+
+
+
+
+  <footer>
+
+    <section class="reklame2">
 
     </section>
 
 
+    <section class="hele_footer">
 
 
-  </main>
-  <footer>
+      <section class="om_oss_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>INFORMASJON</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="../logg inn og liste/logginn.html"> LOGG INN</a></td>
+            </tr>
+            <tr>
+              <td><a href="../logg inn og liste/ønskeliste.html">ØNSKELISTE</a></td>
+            </tr>
+            <tr>
+              <td>KONTAKT OSS</td>
+            </tr>
+            <tr>
+              <td>BLI MEDLEM</td>
+            </tr>
+          </tbody>
 
+        </table>
+      </section>
+
+      <section class="Herre_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>HERRE</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td> <a href="index.html">FORSIDE</a>
+              </td>
+            </tr>
+            <tr>
+              <td>NYHETER</td>
+            </tr>
+            <tr>
+              <td>SALG</td>
+            </tr>
+            <tr>
+              <td>SKO</td>
+            </tr>
+          </tbody>
+
+        </table>
+
+      </section>
+
+      <section class="Dame_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>DAMER</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="index.html">FORSIDE</a></td>
+            </tr>
+            <tr>
+              <td>NYHETER</td>
+            </tr>
+            <tr>
+              <td>SALG</td>
+            </tr>
+            <tr>
+              <td>SKO</td>
+            </tr>
+          </tbody>
+
+        </table>
+        <tr>
+
+      </section>
+
+      <section class="Barn_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>BARN</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="index.html">FORSIDE</a></td>
+            </tr>
+            <tr>
+              <td>NYHETER</td>
+            </tr>
+            <tr>
+              <td>SALG</td>
+            </tr>
+            <tr>
+              <td>SKO</td>
+            </tr>
+          </tbody>
+
+        </table>
+      </section>
+
+
+
+    <section class="sosial_footer">
+      <table>
+        <thead>
+          <tr>
+            <th>Følg oss</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a href="http://www.singhsandhu.com"><img src="../bilder/face.png" class="sosbilder"></a></td>
+            <td><a href="http://www.singhsandhu.com"><img src="../bilder/twit.png" class="sosbilder"></a></td>
+            <td><a href="http://www.singhsandhu.com"><img src="../bilder/insta.jpg" class="sosbilder"></a></td>
+          </tr>
+
+        </tbody>
+
+      </table>
+    </section>
+
+
+
+      </section>
   </footer>
 
+
+</body>
 
 </html>
