--- a/KaranSinMorsommeFerie/Nettside/index.html
+++ b/KaranSinMorsommeFerie/Nettside/index.html
@@ -25,6 +25,8 @@
     </div>
   </header>
   <main>
+
+    <a href="../Klesnettside prosjekt/a INDEX/index.html">nettside</a>
 <br>
 <h1>Det periodiske system</h1>
     <section class="periodiske">
