--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a HERRE/herre.html
@@ -147,7 +147,7 @@
 
 
     <section class="valg">
-
+<h2>her skal man velge klær</h2>
     </section>
 
 
@@ -157,12 +157,12 @@
 
 
       <section class="tabell_side">
-
+<h3>side tabell her</h3>
       </section>
 
 
 
-        <section class="nyheter_index">
+        <section class="_index">
           <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
           <div class="Merke">Polo Ralph Lauren </div>
           <div class="navn">BEAR - Strikkegenser
@@ -170,7 +170,7 @@
           <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
         </section>
 
-        <section class="nyheter_index">
+        <section class="_index">
           <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
           <div class="Merke">Polo Ralph Lauren </div>
           <div class="navn">BEAR - Strikkegenser
@@ -178,7 +178,7 @@
           <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
         </section>
 
-        <section class="nyheter_index">
+        <section class="_index">
           <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
           <div class="Merke">Polo Ralph Lauren </div>
           <div class="navn">BEAR - Strikkegenser
