--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/a index/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SISAKA</title>
+  <title>SISAKA-HERRE</title>
   <link rel="stylesheet" href="main.css">
 </head>
 
