--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
@@ -15,7 +15,7 @@
 
 
 
-    <section class="lenke damherbar">
+    <section class="lenke damherbar ">
       <a href="Dame.html">DAME </a>
       |
       <a href="herre.html"> HERRE </a>
@@ -41,26 +41,26 @@
 
 
 
-    <div class="lenke logginn">
+    <section class="lenke logginn">
 
 
       <a href="logginn.html"><img src="bilder/logg inn.png" alt="" class="logginnbilde"> </a>
 
       <a href="logginn.html"><br>LOGG INN</a>
 
-    </div>
+    </section>
 
 
 
 
 
-    <div class="lenke logginn">
+    <section class="lenke logginn">
 
       <a href="ønskeliste.html"><img src="bilder/ønskeliste.png" alt="" class="logginnbilde"> </a>
 
       <a href="ønskeliste.html">LISTE</a>
 
-    </div>
+    </section>
 
   </header>
 
@@ -144,7 +144,8 @@
 
 
 
-    <section class="reklame1">
+<section class="reklame1">
+
 
     </section>
 
@@ -183,21 +184,21 @@
 
         <section class="nr1">
           <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/manmod.psd" alt="" class="bilde3"></a>
+          <a href="a Herre/herre.html"><img src="bilder/herremod.psd" alt="" class="bilde3"></a>
         </section>
 
 
 
         <section class=" nr2">
           <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/manmod.psd" alt="" class="bilde3"></a>
+          <a href="a Herre/herre.html"><img src="bilder/herremod2.psd" alt="" class="bilde3"></a>
         </section>
 
 
 
         <section class=" nr3">
           <a href="a HERRE/herre.html"></a>
-          <a href="a Herre/herre.html"><img src="bilder/manmod.psd" alt="" class="bilde3"></a>
+          <a href="a Herre/herre.html"><img src="bilder/herremod3.psd" alt="" class="bilde3"></a>
         </section>
 
 
