--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -73,64 +73,75 @@
 
 
 
+        <section class="dropned">
 
-        <div class="dropned"><a href="../herre.html">klær </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+        <button class="dropknapp"><a href="herre.html">Klær</a>
+        <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropned-content">
+          <section class="dropned-content">
+            <a href="herre.html">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </section>
+          </section>
+
+
+      <section class="dropned">
+        <button class="dropknapp"><a href="../herre.html">Sko</a>
+        <i class="fa fa-caret-down"></i>
+          </button>
+          <section class="dropned-content">
             <a href="#">Gensere</a>
             <a href="#">Bukser</a>
             <a href="#">Jakker</a>
-          </div>
-        </div>
+          </section>
+          </section>
 
 
 
-        <div class="dropned"><a href="../herre.html">Sko </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+  <section class="dropned">
+        <button class="dropknapp"><a href="../herre.html">Sport</a>
+        <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropned-content">
+          <section class="dropned-content">
             <a href="#">Gensere</a>
             <a href="#">Bukser</a>
             <a href="#">Jakker</a>
-          </div>
-        </div>
+          </section>
+          </section>
 
 
 
-        <div class="dropned"><a href="../herre.html">sport </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+  <section class="dropned">
+        <button class="dropknapp"><a href="../herre.html">Accesories</a>
+        <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropned-content">
+          <section class="dropned-content">
             <a href="#">Gensere</a>
             <a href="#">Bukser</a>
             <a href="#">Jakker</a>
-          </div>
-        </div>
+          </section>
+          </section>
 
 
-
-        <div class="dropned"><a href="../herre.html">accesories </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
+  <section class="dropned">
+        <button class="dropknapp"><a href="../herre.html">Salg</a>
+        <i class="fa fa-caret-down"></i>
           </button>
-          <div class="dropned-content">
+          <section class="dropned-content">
             <a href="#">Gensere</a>
             <a href="#">Bukser</a>
             <a href="#">Jakker</a>
-          </div>
-        </div>
+          </section>
+          </section>
 
 
-        <div class="dropned"><a href="../herre.html">Salg </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
-          </div>
-        </div>
+        </section>
+
       </section>
+
+
+</section>
 
       <section class="denusynlig">
 
@@ -145,7 +156,8 @@
 
 
 
-    <section class="reklame1">
+
+<body><section class="reklame1">
 <video src="bilder/Woman Picking Out Clothes.mp4" autoplay width="100%" height="auto">
 </video>
     </section>
@@ -262,6 +274,31 @@
         <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
 
+
+      
+      <section class="nyheter_index">
+        <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""> </div>
+        <div class="Merke">Supreme</div>
+        <div class="navn">GLACIER JACKET
+        </div>
+        <div class="pris">2 995 kr</div>
+      </section>
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="bilder/lauren_it.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren</div>
+        <div class="navn">HI TECH Fleecejakke</div>
+        <div class="pris">1 499 kr</div>
+      </section>
+
+
+      <section class="nyheter_index">
+        <div class="bilde"><img src="bilder/it dress.jpg" alt=""> </div>
+        <div class="Merke">Versace</div>
+        <div class="navn">VERSACE SUIT - Dress</div>
+        <div class="pris">29 899 kr</div>
+      </section>
 
 
     </section>
