--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -153,13 +153,22 @@
 
     </nav>
 
+<section class="under_nav">
+<section class="women_get">
+<a href="#"> Women: get up to 60% off dresses!!</a>
+</section>
+<section class="Men_get">
+<a href="#">Men: Get up to 60% off sweaters!!</a>
+</section>
 
 
 
+</section>
 
-<body><section class="reklame1">
-<video src="bilder/Woman Picking Out Clothes.mp4" autoplay width="100%" height="auto">
-</video>
+
+
+<section class="reklame1">
+<a href="#"><img src="bilder/hoved_bilde_reklame.psd"></a>
     </section>
 
 
@@ -275,7 +284,7 @@
       </section>
 
 
-      
+
       <section class="nyheter_index">
         <div class="bilde"><img src="bilder/it klesnettside nyhet.jpg" alt=""> </div>
         <div class="Merke">Supreme</div>
@@ -304,7 +313,22 @@
     </section>
 
 
+De beste merkene fra hele verden:
+<section class="brands">
 
+<section class="Ralph">
+<a href="#"><img src="bilder/" alt=""> </a>
+</section>
+
+<section class="versace">
+
+</section>
+
+<section class="Gucci">
+
+</section>
+
+</section>
 
 
 
