--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -125,7 +125,7 @@
 
 
   <section class="dropned">
-        <button class="dropknapp"><a href="../herre.html">Salg</a>
+        <button class="dropknapp"><a href="herre.html">Salg</a>
         <i class="fa fa-caret-down"></i>
           </button>
           <section class="dropned-content">
@@ -313,19 +313,31 @@
     </section>
 
 
-De beste merkene fra hele verden:
+<h2 class="brand_overskrift">De beste merkene fra hele verden</h2>
 <section class="brands">
 
-<section class="Ralph">
-<a href="#"><img src="bilder/" alt=""> </a>
+<section class="Louis">
+<a href="#"><img src="bilder/Louis.psd" alt=""> </a>
 </section>
 
 <section class="versace">
-
+<a href=""><img src="bilder/versace.psd" alt=""> </a>
 </section>
 
 <section class="Gucci">
+<a href="#"><img src="bilder/Gucci.psd" alt=""> </a>
+</section>
 
+<section class="off_white">
+<a href="#"><img src="bilder/off_white.psd" alt=""> </a>
+</section>
+
+<section class="Supreme">
+<a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
+</section>
+
+<section class="Balenciaga">
+<a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
 </section>
 
 </section>
