--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/Herre/klær.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/Herre/klær.html
@@ -143,7 +143,6 @@
     </nav>
 
 
-
     <section class="reklame1">
 
     </section>
@@ -154,11 +153,42 @@
 
 
 
+    <section class="valg_klær">
 
-    <section class="valg">
-<h2>her skal man velge klær</h2>
+      <section class="str">
+
+      <select name="VelgDrikke"required>
+        <option value=""> Størrelse </option>
+        <option value="brus">xxs</option>
+        <option value="juice">xs</option>
+        <option value="vann">s</option>
+        <option value="vann">m</option>
+        <option value="vann">L</option>
+        <option value="vann">XL</option>
+        <option value="vann">XXL</option>
+      </select>
+
+      </section>
+
+
+
+      <section class="Pris">
+      
+        <option class="str_herre"> Pris </option>
+        <option value="brus">0-100</option>
+        <option value="juice">100-500</option>
+        <option value="vann">500-1000</option>
+        <option value="vann">1000-10 000</option>
+        <option value="vann">10 000-100 000</option>
+        <option value="vann">100 000-1 000 000</option>
+
+      </section>
+
+      <section class="Farge">
+
+      </section>
+
     </section>
-
 
 
 
@@ -168,61 +198,61 @@
       <section class="tabell_full">
 
 
-<ul class="tabell_halv">
-  <li><a href="#" class="Klær_tekst">Klær</a></li>
+        <ul class="tabell_halv">
+          <li><a href="#" class="Klær_tekst">Klær</a></li>
 
 
-  <li><a href="#" class="tabell_ord">T-skjorter</a></li>
-  <li><a href="#"class="tabell_ord" >Skjorter </a></li>
-  <li><a href="#"class="tabell_ord">Jakker</a></li>
-  <li><a href="#"class="tabell_ord">Gensere</a></li>
-  <li><a href="#"class="tabell_ord">Bukser </a></li>
-  <li><a href="#"class="tabell_ord">Undertøy </a></li>
-  <li><a href="#"class="tabell_ord"></a></li>
-  <li><a href="#"class="tabell_ord"> </a></li>
-  <li><a href="#"class="tabell_ord"> </a></li>
-    <li><a href="#" class="Klær_tekst">Sko</a></li>
+          <li><a href="#" class="tabell_ord">T-skjorter</a></li>
+          <li><a href="#" class="tabell_ord">Skjorter </a></li>
+          <li><a href="#" class="tabell_ord">Jakker</a></li>
+          <li><a href="#" class="tabell_ord">Gensere</a></li>
+          <li><a href="#" class="tabell_ord">Bukser </a></li>
+          <li><a href="#" class="tabell_ord">Undertøy </a></li>
+          <li><a href="#" class="tabell_ord"></a></li>
+          <li><a href="#" class="tabell_ord"> </a></li>
+          <li><a href="#" class="tabell_ord"> </a></li>
 
-</ul>
+
+        </ul>
       </section>
 
 
 
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-        <section class="_index">
-          <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
-          <div class="Merke">Polo Ralph Lauren </div>
-          <div class="navn">BEAR - Strikkegenser
-          </div>
-          <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
-        </section>
-
-
-
+      <section class="_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
       </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+      <section class="_index">
+        <div class="bilde"><img src="../bilder/it klesnettside nyhet ralph.jpg" alt=""></div>
+        <div class="Merke">Polo Ralph Lauren </div>
+        <div class="navn">BEAR - Strikkegenser
+        </div>
+        <div class="pris"><mark class="nåpris">9 999 kr </mark> <mark class="førpris">19 999 </mark> <mark class="nåpris">25%</mark> </div>
+      </section>
+
+
+
+    </section>
 
 
 
@@ -351,28 +381,28 @@
 
 
 
-    <section class="sosial_footer">
-      <table>
-        <thead>
-          <tr>
-            <th>Følg oss</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><a href="http://www.singhsandhu.com"><img src="../bilder/face.png" class="sosbilder"></a></td>
-            <td><a href="http://www.singhsandhu.com"><img src="../bilder/twit.png" class="sosbilder"></a></td>
-            <td><a href="http://www.singhsandhu.com"><img src="../bilder/insta.jpg" class="sosbilder"></a></td>
-          </tr>
+      <section class="sosial_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>Følg oss</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="http://www.singhsandhu.com"><img src="../bilder/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../bilder/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="../bilder/insta.jpg" class="sosbilder"></a></td>
+            </tr>
 
-        </tbody>
+          </tbody>
 
-      </table>
-    </section>
-
-
-
+        </table>
       </section>
+
+
+
+    </section>
   </footer>
 
 
