--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/Herre/klær.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/Herre/klær.html
@@ -173,7 +173,9 @@
 
 
       <section class="Pris">
-      
+        <select name="VelgDrikke"required>
+              <option class="str_herre"> Pris </option>
+
         <option class="str_herre"> Pris </option>
         <option value="brus">0-100</option>
         <option value="juice">100-500</option>
@@ -181,11 +183,22 @@
         <option value="vann">1000-10 000</option>
         <option value="vann">10 000-100 000</option>
         <option value="vann">100 000-1 000 000</option>
-
+    </select>
       </section>
 
       <section class="Farge">
+        <select name="VelgDrikke"required>
+        <option value="">Farge</option>
+        <option value="brus">Rød</option>
+        <option value="juice">Hvit</option>
+        <option value="vann">Svart</option>
+        <option value="brus">Blå</option>
 
+      </select>
+      </section>
+
+      <section class="søkemotorer">
+        <button type="submit" class="knapp2">søk</button>
       </section>
 
     </section>
