--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/herre.html
@@ -31,7 +31,7 @@
 
 
     <section>
-      <a href="index.html"><img src="bilder/logo.psd" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
     </section>
 
 
@@ -68,69 +68,72 @@
 
     <nav class="navigation">
 
-
-      <section class="klesvalg">
-
+            <section class="klesvalg">
 
 
 
-        <div class="dropned"><a href="../herre.html">klær </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
+              <section class="dropned">
+
+              <button class="dropknapp"><a href="herre.html">Klær</a>
+
+            </button>
+                <section class="dropned-content">
+                  <a href="herre.html">Gensere</a>
+                  <a href="#">Bukser</a>
+                  <a href="#">Jakker</a>
+                </section>
+                </section>
+
+
+            <section class="dropned">
+              <button class="dropknapp"><a href="../herre.html">Sko</a>
+
+                </button>
+                <section class="dropned-content">
+                  <a href="#">Gensere</a>
+                  <a href="#">Bukser</a>
+                  <a href="#">Jakker</a>
+                </section>
+                </section>
 
 
 
-        <div class="dropned"><a href="../herre.html">Sko </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
+        <section class="dropned">
+              <button class="dropknapp"><a href="../herre.html">Sport</a>
+                </button>
+                <section class="dropned-content">
+                  <a href="#">Gensere</a>
+                  <a href="#">Bukser</a>
+                  <a href="#">Jakker</a>
+                </section>
+                </section>
 
 
 
-        <div class="dropned"><a href="../herre.html">sport </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BUKSER</a>
-          </div>
-        </div>
+        <section class="dropned">
+              <button class="dropknapp"><a href="../herre.html">Accesories</a>
+                </button>
+                <section class="dropned-content">
+                  <a href="#">Gensere</a>
+                  <a href="#">Bukser</a>
+                  <a href="#">Jakker</a>
+                </section>
+                </section>
 
 
+        <section class="dropned">
+              <button class="dropknapp"><a href="herre.html">Salg</a>
+                </button>
+                <section class="dropned-content">
+                  <a href="#">Gensere</a>
+                  <a href="#">Bukser</a>
+                  <a href="#">Jakker</a>
+                </section>
+                </section>
 
-        <div class="dropned"><a href="../herre.html">accesories </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
 
+              </section>
 
-        <div class="dropned"><a href="../herre.html">Salg </a>
-          <button class="dropknapp" <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="dropned-content">
-            <a href="#">HERRE</a>
-            <a href="#">DAME</a>
-            <a href="#">BARN</a>
-          </div>
-        </div>
-      </section>
 
       <section class="denusynlig">
 
@@ -144,12 +147,7 @@
 
 
 
-<section class="reklame1">
-
-
-    </section>
-
-
+<!-- Main!!!!!!!!-->
 
 
 
@@ -162,15 +160,15 @@
 
 
 <section class="velge_ting">
-<a href="Herre/klær.html" class="velge_ord">klær</a>
+<a href="klær.html" class="velge_ord">klær</a>
 |
-<a href="Herre/klær.html" class="velge_ord">Sko</a>
+<a href="klær.html" class="velge_ord">Sko</a>
 |
-<a href="Herre/klær.html" class="velge_ord">Sport</a>
+<a href="klær.html" class="velge_ord">Sport</a>
 |
-<a href="Herre/klær.html" class="velge_ord">Accesoriec</a>
+<a href="klær.html" class="velge_ord">Accesories</a>
 |
-<a href="Herre/klær.html" class="velge_ord">Salg</a>
+<a href="klær.html" class="velge_ord">Salg</a>
 
 </section>
 
@@ -201,24 +199,51 @@
           <a href="a Herre/herre.html"><img src="bilder/herremod3.psd" alt="" class="bilde3"></a>
         </section>
 
+    </section>
 
+    </section>
+        <section class="brands">
 
+        <section class="Louis">
+        <a href="#"><img src="bilder/Louis.psd" alt=""> </a>
+        </section>
 
+        <section class="versace">
+        <a href=""><img src="bilder/versace.psd" alt=""> </a>
+        </section>
+
+        <section class="Gucci">
+        <a href="#"><img src="bilder/Gucci.psd" alt=""> </a>
+        </section>
+
+        <section class="off_white">
+        <a href="#"><img src="bilder/off_white.psd" alt=""> </a>
+        </section>
+
+        <section class="Supreme">
+        <a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
+        </section>
+
+        <section class="Balenciaga">
+        <a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
+        </section>
+
+        </section>
 
 
 
   </main>
 
 
+  <section class="reklame2">
 
-
-
+    </section>
 
   <footer>
 
-    <section class="reklame2">
 
-    </section>
+
+
 
 
     <section class="hele_footer">
