--- a/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
+++ b/KaranSinMorsommeFerie/Klesnettside prosjekt/index.html
@@ -31,7 +31,7 @@
 
 
     <section>
-      <a href="index.html"><img src="bilder/logo.psd" alt="logo" class="logo"></a>
+      <a href="index.html"><img src="bilder/riktiglogos.pdf" alt="logo" class="logo"></a>
     </section>
 
 
@@ -75,73 +75,67 @@
 
         <section class="dropned">
 
-        <button class="dropknapp"><a href="herre.html">Klær</a>
-        <i class="fa fa-caret-down"></i>
+          <button class="dropknapp"><a href="herre.html">Klær</a>
+
           </button>
           <section class="dropned-content">
             <a href="herre.html">Gensere</a>
             <a href="#">Bukser</a>
             <a href="#">Jakker</a>
           </section>
-          </section>
-
-
-      <section class="dropned">
-        <button class="dropknapp"><a href="../herre.html">Sko</a>
-        <i class="fa fa-caret-down"></i>
-          </button>
-          <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
-          </section>
-          </section>
-
-
-
-  <section class="dropned">
-        <button class="dropknapp"><a href="../herre.html">Sport</a>
-        <i class="fa fa-caret-down"></i>
-          </button>
-          <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
-          </section>
-          </section>
-
-
-
-  <section class="dropned">
-        <button class="dropknapp"><a href="../herre.html">Accesories</a>
-        <i class="fa fa-caret-down"></i>
-          </button>
-          <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
-          </section>
-          </section>
-
-
-  <section class="dropned">
-        <button class="dropknapp"><a href="herre.html">Salg</a>
-        <i class="fa fa-caret-down"></i>
-          </button>
-          <section class="dropned-content">
-            <a href="#">Gensere</a>
-            <a href="#">Bukser</a>
-            <a href="#">Jakker</a>
-          </section>
-          </section>
-
-
         </section>
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="../herre.html">Sko</a>
+
+          </button>
+          <section class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </section>
+        </section>
+
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="../herre.html">Sport</a>
+          </button>
+          <section class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </section>
+        </section>
+
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="../herre.html">Accesories</a>
+          </button>
+          <section class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </section>
+        </section>
+
+
+        <section class="dropned">
+          <button class="dropknapp"><a href="herre.html">Salg</a>
+          </button>
+          <section class="dropned-content">
+            <a href="#">Gensere</a>
+            <a href="#">Bukser</a>
+            <a href="#">Jakker</a>
+          </section>
+        </section>
+
 
       </section>
 
 
-</section>
 
       <section class="denusynlig">
 
@@ -153,22 +147,22 @@
 
     </nav>
 
-<section class="under_nav">
-<section class="women_get">
-<a href="#"> Women: get up to 60% off dresses!!</a>
-</section>
-<section class="Men_get">
-<a href="#">Men: Get up to 60% off sweaters!!</a>
-</section>
+    <section class="under_nav">
+      <section class="women_get">
+        <a href="#"> Women: get up to 60% off dresses!!</a>
+      </section>
+      <section class="Men_get">
+        <a href="#">Men: Get up to 60% off sweaters!!</a>
+      </section>
 
 
 
-</section>
+    </section>
 
 
 
-<section class="reklame1">
-<a href="#"><img src="bilder/hoved_bilde_reklame.psd"></a>
+    <section class="reklame1">
+
     </section>
 
 
@@ -311,36 +305,50 @@
 
 
     </section>
+    <section class="brand_enogalle">
 
 
-<h2 class="brand_overskrift">De beste merkene fra hele verden</h2>
-<section class="brands">
 
-<section class="Louis">
-<a href="#"><img src="bilder/Louis.psd" alt=""> </a>
-</section>
+      <h2 class="brand_overskrift">De beste merkene fra hele verden</h2>
+      <section class="brands">
 
-<section class="versace">
-<a href=""><img src="bilder/versace.psd" alt=""> </a>
-</section>
+        <section class="Louis">
+          <section class="brand_enogalle">
+            <a href="#"><img src="bilder/Louis.psd" alt=""> </a>
+          </section>
+        </section>
 
-<section class="Gucci">
-<a href="#"><img src="bilder/Gucci.psd" alt=""> </a>
-</section>
+        <section class="versace">
+          <section class="brand_enogalle">
+            <a href=""><img src="bilder/versace.psd" alt=""> </a>
+          </section>
+        </section>
 
-<section class="off_white">
-<a href="#"><img src="bilder/off_white.psd" alt=""> </a>
-</section>
+        <section class="Gucci">
+          <section class="brand_enogalle">
+            <a href="#"><img src="bilder/Gucci.psd" alt=""> </a>
+          </section>
+        </section>
 
-<section class="Supreme">
-<a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
-</section>
+        <section class="off_white">
+          <section class="brand_enogalle">
+            <a href="#"><img src="bilder/off_white.psd" alt=""> </a>
+          </section>
+        </section>
 
-<section class="Balenciaga">
-<a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
-</section>
+        <section class="Supreme">
+          <section class="brand_enogalle">
+            <a href="#"><img src="bilder/Supreme.psd" alt=""> </a>
+          </section>
+        </section>
 
-</section>
+        <section class="Balenciaga">
+          <section class="brand_enogalle">
+            <a href="#"><img src="bilder/Balenciaga.psd" alt=""> </a>
+          </section>
+        </section>
+
+      </section>
 
 
 
@@ -354,7 +362,7 @@
   <footer>
 
     <section class="reklame2">
-
+      <a href="herre.html"><img src="bilder/reklame_2bild.jpg" alt=""></a>
     </section>
 
 
@@ -467,28 +475,28 @@
 
 
 
-    <section class="sosial_footer">
-      <table>
-        <thead>
-          <tr>
-            <th>Følg oss</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
-            <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
-            <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
-          </tr>
+      <section class="sosial_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>Følg oss</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="http://www.singhsandhu.com"><img src="bilder/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="bilder/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.singhsandhu.com"><img src="bilder/insta.jpg" class="sosbilder"></a></td>
+            </tr>
 
-        </tbody>
+          </tbody>
 
-      </table>
-    </section>
-
-
-
+        </table>
       </section>
+
+
+
+    </section>
   </footer>
 
 
